# data-structures

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Structures/: Queue.h  Stack.h
Test/: Test_Queue.cpp  Test_stack.cpp
